--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "darkmode-js": "^1.5.7",
     "next": "13.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
